@@ -3,6 +3,8 @@ Changelog
 
 2.9-dev0 - (unreleased)
 ---------------------------
+* restrict adding members to nrc and awp roles to users from
+  organisations from the NFP's country [dumitval]
 
 2.8 - (2021-04-09)
 ---------------------------
